--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,21 @@
+.start{
+  opacity: 0;
+}
+.end{
+  opacity: 1;
+  transition: opacity 0.5s;
+}
+.main-bg{
+  height: 300px;
+  background-image:url('./img/shoes.png');
+  background-size:cover;
+  background-position: center;
+
+}
+
 .App {
   text-align: center;
+  letter-spacing: -0.8px;
 }
 
 .App-logo {
